# hep-ps

./: .gitignore  Makefile.am  configure.ac  meson.build  meson_options.txt
doc/: Doxyfile.in  DoxygenLayout.xml  Makefile.am  mainpage.dox  meson.build  references.bib
include/: Makefile.am  meson.build
include/hep/: ps-mc.hpp  ps.hpp
include/hep/ps/: ab_terms.hpp  abc_terms.hpp  alphas_calc.hpp  boost.hpp  born_integrand.hpp  cofferaa_phase_space_generator.hpp  constants.hpp  convolute.hpp  correction_type.hpp  coupling_order.hpp  cs_subtraction.hpp  cut_result.hpp  d_subtraction.hpp  diagram.hpp  dipole.hpp  dipole_invariants.hpp  dipole_split.hpp  dipole_type.hpp  dipole_vertex.hpp  dipole_veto.hpp  dipole_with_set.hpp  distributions.hpp  enum.hpp  event_type.hpp  ew_cs_subtraction.hpp  factorization_scheme.hpp  final_state.hpp  find_hep_ps.hpp  fini_integrand.hpp  finite_parts.hpp  fold.hpp  fortran_helper.hpp  generate_dipole.hpp  hh_phase_space_generator.hpp  index_with_particle_class.hpp  initial_state.hpp  initial_state_array.hpp  initial_state_set.hpp  insertion_term.hpp  insertion_term_mode.hpp  (+82 more)
src/: Makefile.am  alphas_calc.cpp  boost.cpp  cofferaa_extra.f  cofferaa_generator.f  cofferaa_generator.f90  cofferaa_interfaces.hpp  cofferaa_phase_space_generator.cpp  cs_subtraction.cpp  d_subtraction.cpp  diagram.cpp  dipole.cpp  dipole_vertex.cpp  dipole_veto.cpp  ew_cs_subtraction.cpp  find_hep_ps.cpp  fortran_helper.cpp  generate_dipole.cpp  generator.f  generator.f90  hadron_hadron_psg_adapter.hpp  initial_state.cpp  insertion_term.cpp  int_dipole.cpp  inv_idx.cpp  kaellen.cpp  list_phase_space_generator.cpp  lusifer_constants.cpp  lusifer_diagram_generator.cpp  lusifer_extra.f  lusifer_extra.f90  lusifer_interfaces.hpp  lusifer_phase_space_generator.cpp  lusifer_ps_channels.cpp  lusifer_ps_functions.cpp  meson.build  nfpc.cpp  no_cutter.cpp  no_recombiner.cpp  ol_born_matrix_elements.cpp  (+34 more)
subprojects/: catch.wrap  hep-mc.wrap  nonstd-span-lite.wrap
tests/: Makefile.am  meson.build  regression_test_lusifer_psg_densities.cpp  regression_test_lusifer_psg_momenta.cpp  regression_test_lusifer_psg_ww_scattering.cpp  regression_test_lusifer_psg_www_production.cpp  regression_test_lusifer_psg_wwzph_production.cpp  regression_test_lusifer_psg_wzj_production.cpp  test_born_integrand.cpp  test_cofferaa_phase_space_generator.cpp  test_dipole.cpp  test_fini_integrand.cpp  test_fortran_helper.cpp  test_generate_dipole.cpp  test_headers.cpp  test_hh_lusifer_phase_space_generator.cpp  test_initial_state.cpp  test_insertion_term.cpp  test_int_dipoles_integrand.cpp  test_list_phase_space_generator.cpp  test_lusifer_diagram_generator.cpp  test_lusifer_phase_space_generator.cpp  test_lusifer_phase_space_generator2.cpp  test_lusifer_phase_space_generator3.cpp  test_lusifer_ps_channels.cpp  test_mc_observables.cpp  test_mc_phase_space_adapter.cpp  test_nfpc.cpp  test_observables_born.cpp  test_observables_born_like.cpp  test_observables_fini.cpp  test_observables_finite_insertion.cpp  test_observables_real.cpp  test_ol_born_matrix_elements.cpp  test_p_type_jet_algorithm.cpp  test_parton.cpp  test_parton_dfs.cpp  test_pdg_functions.cpp  test_permutation.cpp  test_phase_space_generator.hpp  (+10 more)
