incdir = include_directories('.')

headers1 = [
    'hep/ps/ab_terms.hpp',
    'hep/ps/born_integrand.hpp',
    'hep/ps/cofferaa_phase_space_generator.hpp',
    'hep/ps/constants.hpp',
    'hep/ps/convolute.hpp',
    'hep/ps/correction_type.hpp',
    'hep/ps/coupling_order.hpp',
    'hep/ps/cs_subtraction.hpp',
    'hep/ps/d_subtraction.hpp',
    'hep/ps/dipole.hpp',
    'hep/ps/dipole_invariants.hpp',
    'hep/ps/dipole_type.hpp',
    'hep/ps/dipole_vertex.hpp',
    'hep/ps/dipole_veto.hpp',
    'hep/ps/enum.hpp',
    'hep/ps/factorization_scheme.hpp',
    'hep/ps/final_state.hpp',
    'hep/ps/find_hep_ps.hpp',
    'hep/ps/fini_integrand.hpp',
    'hep/ps/finite_parts.hpp',
    'hep/ps/fortran_helper.hpp',
    'hep/ps/generate_dipole.hpp',
    'hep/ps/initial_state.hpp',
    'hep/ps/insertion_term.hpp',
    'hep/ps/insertion_term_type.hpp',
    'hep/ps/int_dipole.hpp',
    'hep/ps/list_phase_space_generator.hpp',
    'hep/ps/luminosity_info.hpp',
    'hep/ps/lusifer_constants.hpp',
    'hep/ps/lusifer_phase_space_generator.hpp',
    'hep/ps/lusifer_ps_channels.hpp',
    'hep/ps/lusifer_ps_functions.hpp',
    'hep/ps/nfpc.hpp',
    'hep/ps/non_zero_dipole.hpp',
    'hep/ps/ol_born_matrix_elements.hpp',
    'hep/ps/ol_int_dipoles.hpp',
    'hep/ps/ol_integrated_mes.hpp',
    'hep/ps/ol_interface.hpp',
    'hep/ps/ol_ioperator.hpp',
    'hep/ps/ol_real_matrix_elements.hpp',
    'hep/ps/p_type_jet_algorithm.hpp',
    'hep/ps/p_type_photon_parton_recombiner.hpp',
    'hep/ps/particle_type.hpp',
    'hep/ps/parton.hpp',
    'hep/ps/parton_df_unc.hpp',
    'hep/ps/parton_dfs.hpp',
    'hep/ps/parton_type.hpp',
    'hep/ps/pdg_functions.hpp',
    'hep/ps/permutation.hpp',
    'hep/ps/phase_space_generator.hpp',
    'hep/ps/phase_space_point.hpp',
    'hep/ps/phase_space_tools.hpp',
    'hep/ps/photon_dipole_selector.hpp',
    'hep/ps/ps_channel.hpp',
    'hep/ps/ps_decay.hpp',
    'hep/ps/ps_functions.hpp',
    'hep/ps/ps_integrand.hpp',
    'hep/ps/ps_invariant.hpp',
    'hep/ps/ps_tchannel.hpp',
    'hep/ps/psp.hpp',
    'hep/ps/psp_type.hpp',
    'hep/ps/rambo_phase_space_generator.hpp',
    'hep/ps/real_integrand.hpp',
    'hep/ps/recombined_state.hpp',
    'hep/ps/regularization_scheme.hpp',
    'hep/ps/renormalization_scheme.hpp',
    'hep/ps/scale_variation.hpp',
    'hep/ps/scales.hpp',
    'hep/ps/spin_correlation_matrix.hpp',
    'hep/ps/static_scale_function.hpp',
    'hep/ps/suppress_banners.hpp',
    'hep/ps/trivial_cutter.hpp',
    'hep/ps/trivial_distributions.hpp',
    'hep/ps/trivial_recombiner.hpp'
]

headers2 = [
    'hep/ps.hpp'
]

headers = files(headers1, headers2)

install_headers(headers1, subdir : 'hep/ps')
install_headers(headers2, subdir : 'hep')
